--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@
 
 name: CI
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -27,8 +27,8 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          
+          node-version: 20.x
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -40,24 +40,24 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-          
+
       # INSTALAR DEPENDENCIAS NPM/Yarn
       - name: Instal dependencies
-        run: yarn
-        
+        run: corepack enable && yarn
+
       # Realização da build
       - name: Run build
         env:
-          FIREBASE_FILE: ${{ secrets.FIREBASE_ACCOUNT_KEY }}          
+          FIREBASE_FILE: ${{ secrets.FIREBASE_ACCOUNT_KEY }}
           FIREBASE_EXPIRYCHECKER_FILE: ${{ secrets.EXPIRY_CHECKER_FIREBASE_ACCOUNT_KEY }}
         run: |
           yarn build
           ls
-          echo $FIREBASE_FILE > ./dist/Config/Firebase/ServiceAccountKey.json          
+          echo $FIREBASE_FILE > ./dist/Config/Firebase/ServiceAccountKey.json
           echo $FIREBASE_EXPIRYCHECKER_FILE > ./dist/Config/Firebase/ExpiryCheckerServiceAccountKey.json
-          
-        
-      - name: Copy code to Digital Ocean
+
+
+      - name: Copy code to server
         uses: appleboy/scp-action@v0.1.3
         with:
           host: ${{ secrets.SSH_HOST }}
@@ -65,8 +65,8 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: ".,!node_modules"
-          target: "~/apps/expirychecker"
-                    
+          target: "/home/deploy/expirychecker/packages/app"
+
       - name: Run production scripts
         uses: appleboy/ssh-action@master
         with:
@@ -74,9 +74,15 @@ jobs:
           username: ${{ secrets.SSH_USER }}
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
-          script: |            
-            cd ~/apps/expirychecker
-            yarn            
+          script: |
+            echo "Starting deployment of root project"
+            cd /home/deploy/expirychecker
+            git pull
+            yarn
+            echo "Finished root project"
+            echo "Starting deployment of app project"
+            cd packages/app
+            yarn
             yarn typeorm migration:run
             pm2 restart expiry-checker
             pm2 restart expiry-checker-queues
