--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
         "dev": "yarn dev:server && yarn dev:queue",
         "dev:server": "ts-node-dev --inspect -r dotenv/config -r tsconfig-paths/register --respawn --transpile-only src/server.ts",
-        "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/queue.ts",
+        "dev:queue": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/Queue.ts",
         "typeorm": "node --require ts-node/register -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d ./src/Services/TypeORM.ts",
         "test": "jest",
         "test:watch": "jest --watch --verbose=true"
@@ -20,7 +20,7 @@
         "@sentry/profiling-node": "^8.50.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
-        "bull": "^4.8.1",
+        "bull": "^4.16.5",
         "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
         "date-fns": "^2.30.0",
