--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "@aws-sdk/client-s3": "^3.717.0",
         "@aws-sdk/lib-storage": "^3.717.0",
         "@aws-sdk/s3-request-presigner": "^3.717.0",
-        "@sentry/node": "^8.50.0",
+        "@sentry/node": "^8.51.0",
+        "@sentry/profiling-node": "^8.51.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "bull": "^4.16.5",
