--- a/.env.example
+++ b/.env.example
@@ -18,11 +18,12 @@ FIREBASE_DEV_EMAIL=
 PORT=
 ADMIN_PORT=
 
+SENTRY_DSN=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
 APP_SECRET=
-INTERNAL_ID=
 
 REVENUECAT_API_KEY=
 
