--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cvbusiness",
+    "name": "expiry-checker",
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
@@ -13,11 +13,11 @@
         "test:watch": "jest --watch --verbose=true"
     },
     "dependencies": {
-        "@aws-sdk/client-s3": "^3.717.0",
-        "@aws-sdk/lib-storage": "^3.717.0",
-        "@aws-sdk/s3-request-presigner": "^3.717.0",
-        "@sentry/node": "^8.51.0",
-        "@sentry/profiling-node": "^8.51.0",
+        "@aws-sdk/client-s3": "^3.735.0",
+        "@aws-sdk/lib-storage": "^3.735.0",
+        "@aws-sdk/s3-request-presigner": "^3.735.0",
+        "@sentry/node": "^8.52.0",
+        "@sentry/profiling-node": "^8.52.0",
         "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "bull": "^4.16.5",
@@ -74,10 +74,10 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prettier": "^3.3.0",
         "firebase-mock": "^2.3.2",
-        "jest": "^27.5.1",
+        "jest": "^29.7.0",
         "prettier": "^2.2.1",
         "supertest": "^6.3.4",
-        "ts-jest": "^27.1.5",
+        "ts-jest": "^29.2.5",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.7.2"
     },
