--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,13 @@
         "strictPropertyInitialization": false,
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "baseUrl": "./src",
 
+        "inlineSourceMap": true,
+        "inlineSources": true,
+        "sourceMap": true,
+        "sourceRoot": "/",
+
+        "baseUrl": "./src",
         "paths": {
             "~types/*": ["@types/*"],
             "@tests/*": ["../__tests__/*"],
@@ -30,9 +35,5 @@
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "sourceMap": true,
-        "inlineSources": true,
-
-        "sourceRoot": "/"
     }
 }
