--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "paths": {
             "~types/*": ["@types/*"],
             "@tests/*": ["../__tests__/*"],
-            "@admin": ["Admin/*"],
+            "@admin/*": ["Admin/*"],
             "@controllers/*": ["App/Controllers/*"],
             "@middlewares/*": ["App/Middlewares/*"],
             "@models/*": ["App/Models/*"],
