--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "license": "MIT",
+    "type": "module",
     "scripts": {
         "build": "tsc",
         "build:babel": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
@@ -50,6 +51,7 @@
         "@babel/plugin-proposal-decorators": "^7.25.9",
         "@babel/preset-env": "^7.26.7",
         "@babel/preset-typescript": "^7.26.0",
+        "@eslint/js": "^9.19.0",
         "@jest/globals": "^29.7.0",
         "@sentry/cli": "^2.41.1",
         "@types/bcrypt": "^5.0.0",
@@ -63,24 +65,20 @@
         "@types/node-schedule": "^1.3.2",
         "@types/stream-json": "^1.7.2",
         "@types/supertest": "^6.0.2",
-        "@typescript-eslint/eslint-plugin": "^4.11.1",
-        "@typescript-eslint/parser": "^4.11.1",
         "babel-core": "^6.26.3",
         "babel-plugin-module-resolver": "^4.1.0",
         "babel-plugin-transform-typescript-metadata": "^0.3.2",
-        "eslint": "^7.17.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^7.2.0",
-        "eslint-import-resolver-typescript": "^2.7.1",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-prettier": "^3.4.1",
+        "eslint": "^9.19.0",
+        "eslint-config-prettier": "^10.0.1",
+        "globals": "^15.14.0",
         "jest": "^29.7.0",
-        "prettier": "^2.8.8",
+        "prettier": "3.4.2",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "typescript": "^5.7.3"
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.22.0"
     },
     "packageManager": "yarn@4.6.0"
 }
